[package]
name = "rustypwn"
version = "0.1.0"
authors = ["Anciety <anciety512@gmail.com>"]
edition = "2018"

[dependencies]
rustypwn_derive = { path = "../rustypwn_derive" }
regex = "1"
crossterm = "0.6"
log = "0.4"
# use my forked version to pass the tests
# PR has been made to original repo
rustypwn_subprocess = { git = "https://github.com/Escapingbug/rust-subprocess" }
#rustypwn_subprocess = { path = "../../rust-subprocess" }
